# acbp-truth-compiler-api

./: .gitignore  README.md  render.yaml  requirements.txt
Apps/CompilerAPI/: MARKETPLACE.md  README.md  Run ACBP Compiler API.bat  api_keys.example.json  export_openapi.py  main.py  openapi.json  rapidapi_plans.py  run_compiler_api.ps1  security.py  smoke_test.ps1
Apps/CompilerAPI/examples/: compact_features.json  dashboard_compare.json  truth_space_compile.json
Libs/acbp-compiler/: fix_pyproject.py  pyproject.toml
Libs/acbp-compiler/src/acbp_compiler/: __init__.py  api_service.py  cli.py  clinical_dashboard.py  compiler.py  dashboard_equivalence.py  models.py  product_service.py
Libs/acbp-compiler/tests/: test_api_service.py  test_clinical_dashboard.py  test_compiler.py  test_dashboard_equivalence.py  test_product_service.py
Libs/acbp-core/: README.md  fix_pyproject.py  patch_core_api_cli.py  patch_invalid_tuples_api.py  pyproject.toml
Libs/acbp-core/src/acbp/: __init__.py  cli.py  engine.py  multi.py  policy_repair.py  query.py  repair.py
Libs/acbp-core/tests/: test_core.py
Libs/acbp-ml/: README.md  patch_binner_low_cardinality.py  pyproject.toml
Libs/acbp-ml/src/acbp_ml/: __init__.py  binning.py  classifier.py  compact.py  profiler.py  usecases.py
Libs/acbp-ml/tests/: test_compact.py  test_ml.py  test_usecases.py
docs/: index.html  openapi.json
